[project]
name = "isr"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "koki-algebra", email = "biz.kokiyamada1022@gmail.com" }
]
dependencies = [
    "sqlalchemy>=2.0.24",
    "psycopg2-binary>=2.9.9",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
main = "isr:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.12.1",
    "flake8>=5.0.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/isr"]

[tool.black]
line-length = 79
